--- a/cancellazione-hr-service/src/main/resources/application.properties
+++ b/cancellazione-hr-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=cancellazione-hr-service
 server.port=8206
-eureka.client.service-url.default-zone=http://localhost:8761/eureka-server
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.datasource.url=jdbc:mysql://localhost:3306/proconsul_stage
 spring.datasource.username=root
 spring.datasource.password=
